--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
             </div>
         </footer>
     </div>
+    
 </body>
+<script type="text/javascript" src="bundle.js"></script>
 
 <!--   Core JS Files   -->
 <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/core/jquery.min.js"></script>
